# ticket-router

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml  pyrightconfig.json  ticket_router.code-workspace
.agents/skills/ticket-router-style/: SKILL.md
docs/: .gitignore
docs/superpowers/plans/: 2026-04-15-customer-service.md
docs/superpowers/specs/: 2026-04-15-customer-service-design.md
package/ticket_router_base/: types.py  utils.py
package/ticket_router_base/data/: __init__.py
package/ticket_router_supervised/: features.py  pyproject.toml  utils.py
scripts/: 01_build_test_set.py  03_run_supervised_traditional.py  04_run_hf.py  04_run_mbert.py  05_run_xlm_roberta.py  batch_api.py  eval.py  eval_interpret.py  eval_interpretability.py  eval_robustness.py  gen_batch.py  generate_eda_figures.py  generate_evaluation_figures.py  generate_fairness_figures.py  generate_figures.py  generate_prompt_example.py  infer_attributes.py  quantize_qwen.py  run_batch.py  run_rule_based.py
src/ticket_infer/: __init__.py  base.py  inferrer.py  multilingual.py  schema.py
src/ticket_router/agent/: __init__.py  batch_api.py  prompt.py  types.py
src/ticket_router/base/: __init__.py  types.py  utils.py
src/ticket_router/base/data/: base.py  utils.py
src/ticket_router/eval/: __init__.py  evaluator.py  fairness_metrics.py  interpret.py  interpret_report.py  report.py  robustness.py  robustness_report.py  utils.py
src/ticket_router/infer/: base.py  inferrer.py  multilingual.py  schema.py
src/ticket_router/llm/: config.py  infer.py  types.py  utils.py
src/ticket_router/plot/: __init__.py  config.py  data.py  eda.py  evaluation.py  fairness.py  robustness.py  style.py
src/ticket_router/serve/: __init__.py  cache.py  config.py  deps.py  main.py  models.py  tasks.py
src/ticket_router/supervised/: __init__.py  cfg.py  config.py  utils.py
src/ticket_router/supervised/encoder/: base.py  sentence_transformer.py  tfidf.py
src/ticket_router/supervised/models/: __init__.py  hf.py  lr.py  mbert.py  svm.py  xgb.py  xlm_roberta.py
src/ticket_router_agent/: __init__.py  config.py  infer.py  prompt.py  types.py  utils.py
src/ticket_router_base/: __init__.py  cfg.py  config.py  predictor.py  types.py  utils.py
src/ticket_router_base/data/: __init__.py  base.py  desc.py  loader.py  prompt_descriptor.py  tasks.py  utils.py
src/ticket_router_base/data/datasets/: __init__.py  (+3 more)
src/ticket_router_base/eval/: __init__.py  aggregate.py  evaluator.py  fairness_metrics.py  loader.py  metrics.py  report.py  utils.py
src/ticket_router_eval/: __init__.py  custom_recipe.py  interpret.py  interpretability_report.py  metrics.py  robustness.py  robustness_report.py
src/ticket_router_rule/: __init__.py  cfg.py  predictor.py  rule_based_final_optimized.py  weighted_rule_model.py
src/ticket_router_serve/: cache.py  config.py  deps.py  main.py  models.py  schemas.py  tasks.py
src/ticket_router_supervised/: __init__.py  config.py  utils.py
src/ticket_router_supervised/encoder/: __init__.py  sentence_transformer.py
src/ticket_router_supervised/models/: __init__.py  hf.py  hf_predictor.py  lr.py  mbert.py  xgb.py  xlm_roberta.py
tests/: test_eval_evaluator.py  test_eval_fairness.py  test_eval_integration.py  test_eval_interpretability.py  test_eval_loader.py  test_eval_metrics_core.py  test_eval_report.py  test_eval_robustness.py  test_serve_e2e.py
(+4 files in other folders)
