[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "ticket-router"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [

]

[dependency-groups]
base = [
    "pydantic>=2.13.3",
    "pandas>=3.0.2",
    "pandera[pandas]>=0.31.1",
    "scikit-learn>=1.8.0",
    "pyarrow>=24.0.0",
]

eval = [
    "ticket-router[base]",
    "aif360>=0.6.1",
    "fairlearn>=0.13.0",
    "textattack>=0.3.10",
    "transformers-interpret>=0.10.0",
    "rich>=15.0.0",
    "openpyxl>=3.1.5",
]

supervised = [
    "ticket-router[base]",
    "datasets>=4.8.4",
    "joblib>=1.5.3",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers[torch]>=5.5.4",
    "xgboost>=3.2.0",
    "sentence-transformers>=5.4.1",
]

agent = [
    "ticket-router[base]",
    "torch>=2.10.0",
    "vllm==0.19.1",
    "bitsandbytes>=0.49.2",
]

serve = [
    "ticket-router[eval]",
    "openai>=2.32.0",
    "fastapi[standard]>=0.136.1",
]

plot = [
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]

scripts = [
    "ipykernel>=7.2.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "tqdm>=4.67.3",
]

dev = [
    "pytest>=9.0.3",
]

[tool.uv]
default-groups = ["scripts", "supervised", "agent", "eval", "serve", "plot", "dev"]
